--- a/episodes/files/commercial.Rmd
+++ b/episodes/files/commercial.Rmd
@@ -1,2 +1,3 @@
 <!-- Include information about your commercialisation team here. -->
 
+For more information about commercialisation please see [link](https://www.bristol.ac.uk/business/innovate-and-grow/research-commercialisation/)
