--- a/episodes/files/copyrightIP.Rmd
+++ b/episodes/files/copyrightIP.Rmd
@@ -1,2 +1,3 @@
 <!-- Who do researchers talk to for copyright and IP help? Got a website? -->
 
+For futher details on copyright and IP at the University of Bristol please refer to the University Secretary's Office [link](https://www.bristol.ac.uk/secretary/legal/intellectual-property-rights/)
