--- a/episodes/files/dmpinfo.Rmd
+++ b/episodes/files/dmpinfo.Rmd
@@ -2,5 +2,5 @@
 
 <!-- This is where you can write information on your organisation's data management and data management plan webpage and support contacts. Replace the text below with anything you like, and it will appear in relevant places in the lessons. -->
 
-Contact your institute's library or research office to find out more about data management and data management plans at your organisation.
+For more information on creating your own data management plan please refer to the Univeristy of Bristol's Information for Researchers [Writing a data management plan](https://www.bristol.ac.uk/staff/researchers/data/writing-a-data-management-plan/)
 
